# Simulator

./: README.md  app.py  gui.py  main.py  pyproject.toml
src/simulator/: simulation.py  thermodynamics.py  units.py
tests/: test_simulator.py
