[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator"
version = "0.1.0"
description = "Process simulation software like HYSYS with thermodynamic package for hydrocarbons"
authors = [
    {name = "mjain5525", email = "your.email@example.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "streamlit",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]